2005-11-09  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/tarkin/wavelet.c:
	* ext/tarkin/wavelet.h:
	* gst/mpegaudioparse/gstmpegaudioparse.c:
	* gst/vbidec/vbidata.c:
	* gst/vbidec/vbiscreen.h:
	* sys/dxr3/ac3_padder.c:
	* sys/dxr3/dxr3audiosink.c:
	* sys/dxr3/dxr3spusink.c:
	* sys/dxr3/dxr3videosink.c:
	* sys/qcam/dark.c:
	  Don't use gtk-doc markers for normal comments. Fix
	  gtk-doc formatting where required.

2005-11-08  Edgard Lima <edgard.lima@indt.org.br>

	configure.ac:
	PORTED_09:
	ext/Makefile.am:
	ext/ivorbis/vorbis.c:
	ext/ivorbis/vorbisfile.c:
	Ported to 0.9. Some issues to be solved yet:
	1- set correct timestamps
	2- seg fault when eos
	3- seek is now disabled

2005-11-06  Julien MOUTTE  <julien@moutte.net>

	* examples/Makefile.am: Cleanup non existing
	examples.

2005-11-06  Julien MOUTTE  <julien@moutte.net>

	* docs/plugins/inspect.stamp: Add missing files.

2005-11-06  Julien MOUTTE  <julien@moutte.net>

	* examples/Makefile.am: Make buildbot happy.

2005-11-06  Julien MOUTTE  <julien@moutte.net>

	* Makefile.am: examples in dist subdirs.
	* configure.ac: enable parameter for building 
	examples.
	* docs/plugins/gst-plugins-bad-plugins.args:
	* docs/plugins/inspect/plugin-dfbvideosink.xml:
	* examples/Makefile.am: Updates.

2005-11-06  Julien MOUTTE  <julien@moutte.net>

	* Makefile.am:
	* autogen.sh:
	* configure.ac:
	* docs/Makefile.am:
	* docs/plugins/.cvsignore:
	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-bad-plugins-decl-list.txt:
	* docs/plugins/gst-plugins-bad-plugins-decl.txt:
	* docs/plugins/gst-plugins-bad-plugins-docs.sgml:
	* docs/plugins/gst-plugins-bad-plugins-sections.txt:
	* docs/plugins/gst-plugins-bad-plugins-undocumented.txt:
	* docs/plugins/gst-plugins-bad-plugins.args:
	* docs/plugins/gst-plugins-bad-plugins.hierarchy:
	* docs/plugins/gst-plugins-bad-plugins.interfaces:
	* docs/plugins/gst-plugins-bad-plugins.prerequisites:
	* docs/plugins/gst-plugins-bad-plugins.signals: